# visual-nlp

./: .gitignore  .gitmodules  CMakeLists.txt  Node.cpp  Node.h  README.md  imgui.ini  imgui_node_graph_test.cpp  imgui_node_graph_test.h  imgui_nodes.cpp  input_conn.cpp  input_conn.h  link_vec.cpp  link_vec.h  main.cpp  module.cpp  module.h  node.cpp  node.h  node_conn.cpp  node_conn.h  node_graph.cpp  node_link.cpp  node_link.h  node_vec.cpp  node_vec.h  output_conn.cpp  output_conn.h  visual-nlp.sln  visual-nlp.vcxproj  visual-nlp.vcxproj.filters
include/: debugger.h  exceptions.h  module.h  module_loader.h  module_py.h  module_selector.h  node.h  node_conn.h  node_graph_utils.h  node_link.h  node_vec.h  py_function.h
include/imgui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Dear_ImGui.sln  cmake_install.cmake  imgui.h  imgui.ini
lib/imgui/: CMakeLists.txt  imgui_demo.cpp  imgui_nodes.cpp
scripts/: 2value.py  add.py  example.csv  hamming_pred.py  levenshtein.py  levenshtein_pred.py  max_value.py  modules.json  mul.py  readcsv.py  script.py  value.py  writecsv.py
src/: debugger.cpp  main.cpp  module.cpp  module_loader.cpp  module_py.cpp  module_selector.cpp  node.cpp  node_conn.cpp  node_graph.cpp  node_vec.cpp  py_function.cpp
